# voice-translation-poc

./: .cursorrules  .gitignore  AUDIO_RESAMPLING_FIX.md  CLAUDE.md  Makefile  README.md  STREAMING_IMPLEMENTATION.md  WEBSOCKET_API.md  docker-compose.yml  pyproject.toml  test_streaming_client.py
.github/workflows/: pipeline.yml  release.yml
acs_lambda_code/: README.md  requirements.txt
acs_lambda_code/acs-events/: __init__.py  function.json
client_web/: ACS_WebClient_WebUI_Codex_Instructions_v4_DockerOnly.md  Dockerfile  Makefile  PARTICIPANT_AUDIO_BROADCAST_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
client_web/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
client_web/frontend/src/: App.tsx  api.js  api.ts  main.js  main.tsx  router.js  state.js
client_web/frontend/src/audio/: capture.js  capture.ts  dummy-capture.js  multi-participant-manager.js  pcm16.js  playback.js  playback.ts
client_web/frontend/src/components/: app-shell.js  call-room.js  create-call.js  event-log.js  join-call.js  participant-list.js  translation-service-panel.js
client_web/frontend/src/styles/: base.css
client_web/src/acs_webclient/: __init__.py  calls.py  config.py  main.py  upstream.py
client_web/src/acs_webclient/calls/: __init__.py  call_manager.py  call_state.py
client_web/src/acs_webclient/protocol/: __init__.py  acs.py
docker/: .env.deployment  Dockerfile
docs/: timing-model-analysis.md  translation-service-architecture.md
evaluations/: __init__.py  audio_handler.py  convert_to_acs_format.py  echo_test.py  metrics_calculator.py  models.py  report_generator.py  run_evaluations.py  test_cases.yaml  test_runner.py  websocket_echo.py
evaluations/ground_truth/: conversation1.txt  conversation2.txt  conversation3.txt  conversation4.txt  conversation5.txt  local001.txt  noise.txt  technical_en.txt  technical_es.txt
evaluations/metrics/: __init__.py  completeness.py  intent_preservation.py  language_correctness.py  technical_terms.py  text_metrics.py  text_normalization.py  wer.py
k8s/: deployment.yml
metrics_exporter/: Makefile  README.md  docker-compose.yml  requirements.txt
metrics_exporter/app/: main.py  (+4 more)
production/: .env.example  .gitignore  DEBUG.md  README.md  __init__.py
scripts/: check_voice_live_ws.py  resample_wav.py
server/: .config.example.yml  .env.example  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ENV_CONFIG.md  Makefile  README.md  config.example.yaml  config.py  main.py  provider_client.py  queues.py  requirements.txt  service.py
test-socket-emitter/: README.md  emit_audio.py
(+338 files in other folders)
