[tool.poetry]
name = "acs-webclient"
version = "0.1.0"
description = "Web client for ACS emulator"
authors = ["VT Voice Translation POC Team <devnull@example.com>"]
packages = [{ include = "acs_webclient", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
websockets = "^11.0.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
